Fixed filter button alignment - mobile

--- a/portfolio/src/styles/partials/_footer.scss
+++ b/portfolio/src/styles/partials/_footer.scss
@@ -1,7 +1,8 @@
 footer {
   position: relative;
-  //z-index: 3;
   text-align: center;
+  z-index: 3;
+  background: none;
   a {
     color: white;
   }
