--- a/portfolio/src/styles/partials/_main.scss
+++ b/portfolio/src/styles/partials/_main.scss
@@ -2,7 +2,7 @@
 
 // containers
 .main-projects {
-  padding: 20px;
+  padding: 15px;
   h1 {
     margin-top: 50px;
     text-transform: uppercase;
@@ -68,14 +68,14 @@
 
 // Filter buttons //
 .filter-btns {
-  width: 330.8px;
+  width: 312.7px;
   display: block;
   margin: 50px auto;
   border: solid 0.2px rgba(black, 0.1);
   border-radius: 28px;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
   button {
-    padding: 10px 15px;
+    padding: 10px 12px;
     text-align: center;
     border: none;
     background: transparent;
