--- a/portfolio/src/styles/partials/_nav.scss
+++ b/portfolio/src/styles/partials/_nav.scss
@@ -2,6 +2,7 @@
   position: fixed;
   z-index: 2;
   width: 100%;
+  height: 180px;
   bottom: 0;
   padding: 15px 0 40px 0;
   background-color: black;
