--- a/portfolio/src/styles/partials/_singlebase.scss
+++ b/portfolio/src/styles/partials/_singlebase.scss
@@ -2,7 +2,7 @@
 .single-main {
   padding: 20px;
   h1 {
-    margin: 30px;
+    margin: 30px auto;
     text-transform: uppercase;
     text-align: center;
     letter-spacing: 0.25em;
