--- a/portfolio/src/styles/partials/_top.scss
+++ b/portfolio/src/styles/partials/_top.scss
@@ -1,7 +1,7 @@
 .scroll-to-top {
   position: fixed;
   z-index: 5;
-  bottom: 75px;
+  bottom: 130px;
   left: 50%;
   transform: translateX(-50%);
   background-color: black;
@@ -12,7 +12,7 @@
     font-size: 20px;
   }
   &:hover {
-    bottom: 80px;
+    bottom: 135px;
     transition: all ease-in-out 300ms;
   }
   @media (min-width: 650px) {
